feat: DOne for RuedaRent

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <body>
     <!--barra navegadora-->
-    <!--Section Luiggi-->
+    <!--Section David-->
     <section class="mapas">
         <nav class="navbar">
             <div class="menu-toggle">
@@ -16,13 +16,13 @@
                 <div class="menu-toggle-bar"></div>
             </div>
             <div class="logo-container">
-                <img src="images/SecurCar_icon.png" alt="Logo">
-                <span class="logo-container txt">SecurCar</span>
+                <img src="images/RuedaRent_icon.png" alt="Logo">
+                <span class="logo-container txt">RuedaRent</span>
             </div>
             <ul>
                 <li><a href="#home" class="borderless-btn">Home</a></li>
-                <li><a href="#alertas" class="borderless-btn">Ubicación</a></li>
-                <li><a href="#prono" class="borderless-btn">Ofrecemos</a></li>
+                <li><a href="#alertas" class="borderless-btn">Inscríbase</a></li>
+                <li><a href="#prono" class="borderless-btn">Vehículos</a></li>
                 <li><a href="#nostros" class="borderless-btn">Nosotros</a></li>
                 <li><a href="#contacto" class="borderless-btn">Contacto</a></li>
                 <li><a href="#ofrecemos" class="borderless-btn">Beneficios</a></li>
@@ -46,16 +46,17 @@
         </script>
         <div id="home" class="Contenedoruno">
             <div class="columna">
-                <img class="image1" src="images/persona2.png" class="imgBanner" alt="">
+                <img class="image1" src="images/mapa2.png" class="imgBanner" alt="">
             </div>
             <div class="columna1">
                 <p id="txtmapas" class="txtmapas">
-                    <span style="font-size: 35pt; font-weight: bold;">SecurCar</span>
+                    <span style="font-size: 35pt; font-weight: bold;">RuedaRent</span>
                     <br>
-                    SecurCar es una plataforma con el objetivo <br>
-                    de brindar a las personas la facilidad de<br>
-                    llevar formas de asegurar que su vehículo<br>
-                    estará seguro desde cualquier lugar.
+                    RuedaRent es una plataforma con el <br>
+                    objetivo de brindar a las personas la <br>
+                    facilidad de poder probar nuevas formas<br>
+                    de movilizarse, así como ayudar al medio<br>
+                    ambiente.
                 </p>
                 <div class="botonesimagenes">
                     <a href="#" class="btn1banner">Ver más</a>
@@ -64,7 +65,7 @@
 
             </div>
             <div class="columna">
-                <img class="image1" src="images/persona1.png" class="imgBanner2" alt="">
+                <img class="image1" src="images/bike1.png" class="imgBanner2" alt="">
             </div>
 
         </div>
@@ -72,21 +73,22 @@
 
 
     </section>
-    <!--Section Ruben-->
+    <!--Section Alejandro-->
     <section>
         <div class="alertas">
     </section>
     <div id="alertas" class="alert-section">
         <div class="alert-image">
-            <img src="images/mapa1.PNG" alt="Imagen de Alerta" class="alert-img">
+            <img src="images/alertas.png" alt="Imagen de Alerta" class="alert-img">
         </div>
         <div class="alert-content">
-            <h2 class="alert-title">Ubicación</h2>
-            <h3 style="font-size: 15pt;  font-family: Arial;">Registre e inscriba su vehículo, esto con el objetivo de
-                poder saber donde se
-                encuentra su vehículo en todo momento</h3>
-            <h3 style="font-size: 15pt; font-family: Arial;">Además, reciba información si se detecta actividad
-                sospechosa cerca de su vehículo</h3>
+            <h2 class="alert-title">Inscríbase</h2>
+            <h3 style="font-size: 15pt;  font-family: Arial, Helvetica, sans-serif;">Inscriba su medio de transporte, ya
+                sea bicicleta, scooter
+                u otro que ya no use.
+                De esta forme ganar un ingreso extra por medio de alquileres a otro usuario. De esta manera, podrá
+                ayudar a otras personas a descubrir una nueva
+                afición y a contribuir con el medio ambiente.</h3>
             <h3> </h3>
             <h3> </h3>
             <br>
@@ -96,30 +98,30 @@
     <section>
         </div>
     </section>
-    <!--Section Fabrizio-->
+    <!--Section Beth-->
     <section id="prono" class="backofr">
         <div class="Ofrecemos">
             <br><br><br><br><br><br><br><br>
-            <h1>Ofrecemos</h1>
-            <p>A continuación, lo que ofrecemos con <br>
-                la plataforma.</p>
+            <h1>Vehículos</h1>
+            <p>Los vehículos que están a su disposición en la <br>
+                aplicación.</p>
             <div class="card-container-wrapper">
                 <div class="card-container">
                     <div class="card">
-                        <h2 class="cardtext">Avisos de Caducidad</h2>
-                        <img src="images/soat.PNG" alt="Imagen de la Card 1">
+                        <h2 class="cardtext">Skates</h2>
+                        <img src="images/skate.png" alt="Imagen de la Card 1">
                         <button class="btn">MORE</button>
                     </div>
 
                     <div class="card">
-                        <h2 class="cardtext">Dispositivo Rastreador</h2>
-                        <img src="images/chip1.png" alt="Imagen de la Card 2">
+                        <h2 class="cardtext">Bicicletas</h2>
+                        <img src="images/bike2.png" alt="Imagen de la Card 2">
                         <button class="btn">MORE</button>
                     </div>
 
                     <div class="card">
-                        <h2 class="cardtext">Ayuda a los principiantes</h2>
-                        <img src="images/principiante.png" alt="Imagen de la Card 3">
+                        <h2 class="cardtext">Scooters</h2>
+                        <img src="images/scooter.png" alt="Imagen de la Card 3">
                         <button class="btn">MORE</button>
                     </div>
                 </div>
@@ -127,7 +129,7 @@
 
         </div>
     </section>
-    <!--Section Balbin-->
+    <!--Section Juan-->
     <section id="Beneficios" class="Beneficios">
         <div class="ContenerdorBeneficios">
             <div class="titulito">
@@ -135,32 +137,32 @@
             </div>
             <div class="parrafito">
                 <p>
-                    A continuación, se mostrarán algunos beneficios de comenzar a usar las diferentes funciones que
-                    planteamos.
+                    A continuación, se mostrarán algunos beneficios de comenzar a usar los distintos vehículos que
+                    mostramos en la página de alquiler.
                 </p>
             </div>
             <div class="robo">
-                <img class="imagen" src="images/robo.png" alt="">
-                <h3>Alerta a los Robos</h3>
+                <img class="imagen" src="images/traffic.png" alt="">
+                <h3>Evite el tráfico</h3>
             </div>
             <div class="transito">
-                <img class="imagen" src="images/transito.png" alt="">
-                <h3>Consejos Viales</h3>
+                <img class="imagen" src="images/greenfoot.png" alt="">
+                <h3>Reduzca su huella</h3>
             </div>
             <div class="persona3">
-                <img class="imagen" src="images/person3.png" alt="">
-                <h3>Papeles en Orden</h3>
+                <img class="imagen" src="images/ecofriend.png" alt="">
+                <h3>Vida más saludable</h3>
             </div>
         </div>
     </section>
-    <!--Section Louis-->
+    <!--Section Niurka-->
     <section>
         <section id="nostros" class="nosotros">
             <h2 style="font-size: 35pt;  font-family: Arial;">Nosotros</h2>
         </section>
         </div>
     </section>
-    <!--Section David-->
+
     <div id="contacto" class="contact-section">
         <h1>Contacto</h1>
         <p>Dejenos sus datos y nos comunicaremos con usted</p>
@@ -171,7 +173,7 @@
     </div>
     <section class="background-section">
         <div class="column">
-            <h2>SecurCar</h2>
+            <h2>RuedaRent</h2>
             <p></p>
         </div>
         <div class="column">
@@ -187,7 +189,7 @@
         <div class="column">
             <h2>Contact Us</h2>
             <p>+51 987 654 321</p>
-            <p>climaps@gmail.com</p>
+            <p>RuedaRent@gmail.com</p>
             <p>Lima, Perú</p>
         </div>
     </section>
